--- a/helloworld.html
+++ b/helloworld.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">>
-    <title>Hello World</title>>
+    <meta charset="UTF-8">
+    <title>Hello World</title>
   </head>
 
   <body>
